# snowberry

./: .gitignore  CMakeLists.txt  DESIGN.txt  Snowberry.pro  globals.h  main.cpp  snowberry.icns  snowberrynotes.txt  snowberrynotes1.txt
libs/: README
snowctl/: CMakeLists.txt  version.h.in
snowd/: CMakeLists.txt  daemon.cpp  daemon.h  main.cpp  version.h.in
snowd/runner/: CMakeLists.txt  main.cpp
snowgui/: CMakeLists.txt  main.cpp  version.h.in
